// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ProxyPool.Grpc;

service ProxyPoolV1 {
  rpc GetById (Text) returns (Proxy) {}
  rpc Get (Proxy) returns (Proxy) {}
  rpc Create (Proxy) returns (Proxy) {}
}
message Text {
  string Value = 1;
}
// The request message containing the user's name.
message Proxy {
  string IpAddress=1;
  int32 Port = 2;
  string Id = 3;
  string CountryCode = 4;
  string AnonymousType = 5;
  string Type = 6;
}
